# PackPacker

./: Changes.md  Database (1).sql  Database.sql  Notes.md  README.md  SQLBase.mwb  SQLBase.mwb.bak  ToDo.md  package-lock.json  test.py
backend/: .env  .gitignore  alembic.ini  dockerfile  main.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 66cb4abe95a5_add_onhand_field_to_instrument_and_.py  6a50563eb679_add_image_column_to_packs_and_.py  7130199f62aa_change_procedure_name_unique_index_to_.py  808d061448e5_rename_column.py  a2904be15f41_add_activitylog_table.py  a867d3bd5d86_add_quantity_to_packs_and_instruments_.py  c9a3cc64ff1f_remove_clinic_id_from_instruments.py  dc21d78f367e_merge_index_fix_and_activity_log_into_.py  feb8d08ee170_add_roles_and_clinic_scoping.py
backend/config/: Database.sql  database.py  import_sql.py
backend/models/: Clinic.py  Instrument.py  Logging.py  Pack.py  Procedure.py  User.py  __init__.py
backend/models/relationships/: clinics_and_procedures.py  instruments_and_procedures.py  packs_and_instruments.py  packs_and_procedures.py  users_and_clinics.py
backend/repositories/: repositories.py
backend/routes/: clinics.py  instruments.py  logs.py  packs.py  procedures.py  relationships.py  uploads.py  users.py
backend/schemas/: clinic_schemas.py  instrument_schemas.py  log_schemas.py  pack_schemas.py  procedure_schemas.py  user_schemas.py
backend/utils/: activity_logger.py  auth.py  dependencies.py  seed_superuser.py
frontend/: .env  .gitignore  index.html  (+5 more)
(+65 files in other folders)
