[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David Kral <dockral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
sqlalchemy = "1.4.42"
databases = "^0.8.0"
aiosqlite = "^0.19.0"
mysql-connector-python = "^8.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.4.0"
python-dotenv = "^1.1.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
